--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <i class="ri-menu-2-line"></i>
             </div>
             <div id="nav-part2">
-                <h1>GentyTech</h1>
+                <h1>DenyTech</h1>
             </div>
             <div id="nav-part3">
                 <button>Log In</button>
