--- a/index.html
+++ b/index.html
@@ -25,6 +25,22 @@
             </div>
         </div>
         <h1>Our  Advantages</h1>
+        <img id="img1" src="https://plus.unsplash.com/premium_photo-1675252369719-dd52bc69c3df?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTN8fGZvb2R8ZW58MHx8MHx8fDA%3D" alt="">
+        <img id="img2" src="https://images.unsplash.com/photo-1432139509613-5c4255815697?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTJ8fGZvb2R8ZW58MHx8MHx8fDA%3D">
+        <img id="img3" src="https://images.unsplash.com/photo-1432139555190-58524dae6a55?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTV8fGZvb2R8ZW58MHx8MHx8fDA%3D">
+        <img id="img4" src="https://plus.unsplash.com/premium_photo-1673580742890-4af144293960?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8OXx8Zm9vZHxlbnwwfHwwfHx8MA%3D%3D">
+        <h5>Your Smile, Our Passion</h5>
+        <div id="symbols">
+            <div id="ig"><i class="ri-instagram-fill"></i></div>
+          <div id="fb"><i class="ri-facebook-circle-fill"></i></div>
+            <div id="yt"><i class="ri-youtube-fill"></i></div>
+            <div id="arrow"><i class="ri-arrow-down-circle-fill"></i></div>
+        </div>
+        <div id="center">
+            <div id="st"><i class="ri-settings-4-line"></i></div>
+            <h3>Advanced Technology</h3>
+        </div>
+            <h6>Best Startup of 2024</h6>
     </div>
     
 </body>
